--- a/requirements.txt
+++ b/requirements.txt
@@ -180,7 +180,7 @@ tzdata==2023.3
 uri-template==1.3.0
 urllib3==2.0.5
 uvicorn==0.23.2
-uvloop==0.17.0
+uvloop==0.17.0; sys_platform != "win32"
 wasabi==1.1.2
 watchfiles==0.20.0
 wcwidth==0.2.6
